--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "js": "^0.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1"
   },
